force-app/main/default/objects/Defect__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <inlineHelpText>If status is in Blocked, provide a reason here</inlineHelpText>
    <label>Blocked Reason</label>
    <type>TextArea</type>
</CustomField>