force-app/main/default/objects/Defect__c/fields/Browser_Version__c.field-meta.xml
<CustomField>
    <fullName>Browser_Version__c</fullName>
    <inlineHelpText>Browser version in use when user encountered defect. In most browsers, the version can be found by navigating to Help &gt; About in the menu.</inlineHelpText>
    <label>Browser Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>