force-app/main/default/objects/Defect__c/fields/Bug_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Bug_Report_Link__c</fullName>
    <description>If there is another bug tracking system, add the link to the original submission here</description>
    <inlineHelpText>If there is another bug tracking system, add the link to the original submission here</inlineHelpText>
    <label>Bug Report Link</label>
    <type>Url</type>
</CustomField>