force-app/main/default/objects/Defect__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>http://www.wilsonmar.com/1tstwrit.htm</description>
    <inlineHelpText>Be specific. Don&#39;t use vague phrases such as &quot;problems with&quot;, &quot;is incorrect&quot;, or &quot;issue with&quot;. State the expected behavior which did not occur - such as &quot;after pop-up ___, ____ did not appear.&quot; and the behavior which occurred instead.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>