force-app/main/default/objects/Defect__c/fields/Engineering_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Notes__c</fullName>
    <inlineHelpText>For the engineer assigned to evaluate the defect to make notes about the findings of root cause analysis &amp; the solution</inlineHelpText>
    <label>Engineering Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>