force-app/main/default/objects/Defect__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <formula>Test_Scenario__r.Environment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment</label>
    <type>Text</type>
</CustomField>