force-app/main/default/objects/Defect__c/fields/Reproduction_Steps__c.field-meta.xml
<CustomField>
    <fullName>Reproduction_Steps__c</fullName>
    <description>http://www.wilsonmar.com/1tstwrit.htm</description>
    <inlineHelpText>Write step-by-step instructions to reproduce the bug. Number each step. Ex.:

1. As user ___, sign in via __ URL
2. Click ___ tab
3. Select ___ case
4. Enter ___ in ___ field
5. Select ___ from ___ drop down
6. Click Next button

Notice that..</inlineHelpText>
    <label>Reproduction Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>