force-app/main/default/objects/Defect__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <inlineHelpText>Minor / Low - Cosmetic defect/typo; 
Average / Medium - Annoyance; 
Major / High - Unexpected behavior; 
Critical / Show Stopper - Item that prevents further testing; 
Emergency - Highest severity; 
Enhancement - Additional features to improve the product</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minor / Low</fullName>
            </value>
            <value>
                <fullName>Average / Medium</fullName>
            </value>
            <value>
                <fullName>Major / High</fullName>
            </value>
            <value>
                <fullName>Critical / Show Stopper</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>