force-app/main/default/objects/Defect__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Submitted to Engineering - default; 
Evaluating - assigned to eng; 
Development - fix in progress; 
Submitted for Testing - sent to approver; 
Fixed - approved by tester; 
Withdrawn - canceled by submitter; 
Duplicate - closed as a duplicate; 
Blocked - Engineering is blocked;
Rejected - not a defect; 
Won&#39;t Fix - accepted, but no action taken; 
Postponed - future release; 
Failed Testing - rejected by approver; 
Re-Opened</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted to Engineering</fullName>
                <default>true</default>
                <label>Submitted to Engineering</label>
            </value>
            <value>
                <fullName>Evaluating</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Submitted for Testing</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Won&#39;t Fix</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Failed Testing</fullName>
            </value>
            <value>
                <fullName>Re-Opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>