force-app/main/default/objects/Defect__c/fields/Submitted_by_Contact__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who first experienced/reported the defect</description>
    <inlineHelpText>Person who first experienced/reported the defect</inlineHelpText>
    <label>Submitted by (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reported Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>