force-app/main/default/objects/Defect__c/fields/Submitted_by_User__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Internal user who first experienced/reported the defect</inlineHelpText>
    <label>Submitted by (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>