force-app/main/default/objects/Defect__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If there is a Test Scenario that can be used for the Reproduction Steps, indicate that here.</inlineHelpText>
    <label>Test Scenario</label>
    <referenceTo>Test_Scenario__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>