force-app/main/default/objects/Defect__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>http://www.wilsonmar.com/1tstwrit.htm</description>
    <inlineHelpText>Concern - desire for improvement; 
Defect - unexpected behavior; 
Failure - misbehavior of some program; 
Incident - event requiring investigation; 
Issue - point of disagreement of req.; 
Known Error - issue w/ workaround; 
Problem - unknown underlying cause</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concern</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Known Error</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>