force-app/main/default/objects/Defect__c/validationRules/Require_Blocked_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Blocked_Reason</fullName>
    <active>true</active>
    <description>If Status is in Blocked, user must provide a Blocked Reason</description>
    <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &quot;Blocked&quot;),
  ISBLANK(Blocked_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Blocked_Reason__c</errorDisplayField>
    <errorMessage>If you set the Status to Blocked, you must provide a Blocked Reason.</errorMessage>
</ValidationRule>