force-app/main/default/objects/Defect__c/listViews/All_Defects.listView-meta.xml
<ListView>
    <fullName>All_Defects</fullName>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Submitted_by_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Defects</label>
</ListView>