force-app/main/default/objects/Defect__c/listViews/My_Defects.listView-meta.xml
<ListView>
    <fullName>My_Defects</fullName>
    <columns>NAME</columns>
    <columns>Short_Description__c</columns>
    <columns>Status__c</columns>
    <columns>Environment__c</columns>
    <columns>Test_Scenario__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Defects</label>
</ListView>